--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/app.js",
   "scripts": {
-    "start": "tsc && node dist/app.js",
+    "start": "./node_modules/typescript/bin/tsc && node dist/app.js",
     "lint": "eslint . --ext .ts",
     "dev": "nodemon --watch src --exec ts-node src/app.ts",
     "migrate": "prisma migrate dev --name init"
